admission/ValidatingAdmissionPolicy/policies/hostusers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: violating-hostusers
  annotations:
    kubeapt.io/uuid: "1a5efbbe-2a1f-4840-a4fd-19fec7dab8bc"
spec:
  hostUsers: true
  containers:
  - name: main
    image: busybox:1.36
    command: ["sh", "-c", "sleep 3600"]
